<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Device Settings -->
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>

    <!-- Alert Slider -->
    <string name="slider_title">Alert Slider</string>
    <string name="mute_media_title">Mute media volume on silent mode</string>
    <string name="mute_media_summary">This will only take effect for speaker</string>

    <!-- Display Modes -->
    <string name="display_title">Display Modes</string>
    <string name="hbm_mode_summary">Instantly enable the peak luminance of the display</string>
    <string name="hbm_mode_title">High brightness</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_title">Automatic High brightness</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness threshold (lux)</string>
    <string name="auto_hbm_threshold_summary">Adjust peak luminance of the display </string>
    <string name="tile_hbm_mode">High brightness</string>
    <string name="dc_mode_summary">Dim backlight by adjusting DC current drawn to the display</string>
    <string name="dc_mode_title">Automatic DC Dimming</string>

    <!-- Doze -->
    <string name="doze_panel_title">Doze</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="dialog_ok">OK</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="disabled">Disabled</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pick_up_wake_gesture_summary">Wake device on pick-up</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Dolby -->
    <string name="dolby_category">Dolby</string>
    <string name="dolby_title">Dolby Atmos</string>
    <string name="dolby_summary">Configure the audio output based on media content</string>
    <string name="dolby_info">When enable/disable Dolby Atmos, pause/play media for changes to take effect.</string>

    <!-- FPS Info -->
    <string name="fps_title">FPS Info</string>
    <string name="fps_info_title">FPS Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    <string name="fps_info_color_title">Text Color</string>
    <string name="fps_info_color_green">Green</string>
    <string name="fps_info_color_red">Red</string>
    <string name="fps_info_color_blue">Blue</string>
    <string name="fps_info_color_yellow">Yellow</string>
    <string name="fps_info_color_black">Black</string>
    <string name="fps_info_color_accent">Follow System</string>
    <string name="fps_info_position_title">Overlay Position</string>
    <string name="fps_info_position_top_left">Top left</string>
    <string name="fps_info_position_top_center">Top center</string>
    <string name="fps_info_position_top_right">Top right</string>
    <string name="fps_info_position_bottom_left">Bottom left</string>
    <string name="fps_info_position_bottom_center">Bottom center</string>
    <string name="fps_info_position_bottom_right">Bottom right</string>
    <string name="fps_info_text_size_title">Text Size</string>

    <!-- Kcal -->
    <string name="device_kcal_title">Color Calibration</string>
    <string name="kcal_enabled_summary">Calibrate display using KCAL</string>
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="presets_dialog_title">Select Preset</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_sir_banger">Sir Banger</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>
    <string name="kcal_presets" translatable="false">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>
    
    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser(root) access</string>

    <!-- Vibration Strength -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
</resources>
