<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.havoc.support.preferences.SwitchPreference
        android:defaultValue="false"
        android:key="kcal_enabled"
        android:title="@string/kcal_enabled_title"
        android:persistent="false" />

    <PreferenceCategory
        android:key="cat_colormanagement"
        android:title="@string/cat_colormanagement">

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference 
            android:defaultValue="256"
            android:dependency="kcal_enabled"
            android:key="color_red"
            android:max="256"
            android:title="@string/color_red" />

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="256"
            android:dependency="kcal_enabled"
            android:key="color_green"
            android:max="256"
            android:title="@string/color_green" />

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="256"
            android:dependency="kcal_enabled"
            android:key="color_blue"
            android:max="256"
            android:title="@string/color_blue" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_calibration"
        android:title="@string/cat_calibration">

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="saturation"
            android:max="255"
            android:title="@string/saturation" />

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="value"
            android:max="255"
            android:title="@string/value" />

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="contrast"
            android:max="255"
            android:title="@string/contrast" />

        <org.havoc.device.DeviceSettings.ProperSeekBarPreference
            android:defaultValue="0"
            android:dependency="kcal_enabled"
            android:key="hue"
            android:max="1536"
            android:title="@string/hue" />

    </PreferenceCategory>
</PreferenceScreen>
